Vytvorena zakladna struktura

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-Martin Pullman:
+<!DOCTYPE html>
+<html lang="sk">
+    <head>
+        <meta charset="utf-8">
+        <title>Hlavna stránka</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h1>Hlavná stránka</h1>
+        </header>
+        <section>
+
+            Martin Pullman:
 1. Návrh grafického dizajnu pomocou CSS len v externom súbore.
 2. Responzívny dizajn na celej stránke vrátane animácií.
 3. Prispôsobenie stránky pre tlač pomocou CSS.
-5. Zobrazenie počítadla osobných prístupov na stránku.
+5. Zobrazenie počítadla osobných prístupov na stránku.<br><br>
 
 Marek Šulhánek:
 4. Zobrazenie aktuálneho dátumu s meninami v daný deň. Súčasťou bude obojsmerné
@@ -14,8 +27,15 @@ bude dať zadať v tvare 31.3., t.j. nielen v tvare 31.03. Zoznam mien bude doda
 vhodnom formáte. Pri zadávaní mena do formuláru sa bude dať vyhľadať aj meno bez
 diakritiky, pričom na veľkosti písmen nebude záležať.
 6. Favicon pre vytvorenú stránku.
+<br>    <br>
 
 Arne Michalov:
 7. Aplikácia zobrazujúca situácie na križovatkách - úlohou je animovať situácie, ktoré
 riešia vodiči na križovatkách (takéto úlohy nájdete v online testoch, ktoré slúžia na
 prípravu pre získanie vodičského preukazu). 
+        </section>
+
+
+    </body>
+
+</html>
