--- a/meniny.html
+++ b/meniny.html
@@ -4,12 +4,15 @@
         <meta charset="utf-8">
         <title>Meniny</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="javascript.js"></script>
+        
     </head>
     <body>
         <header>
             <h1>Meniny</h1>
         </header>
-
+        <div id="text"></div>
 
 
     </body>
