Pridané zobrazovanie mien podľa dátumu

--- a/meniny.html
+++ b/meniny.html
@@ -12,6 +12,8 @@
         <header>
             <h1>Meniny</h1>
         </header>
+        <input type="text" id="datum" onchange="zmena()" size="5" maxlength="5">
+
         <div id="text"></div>
 
 
