Ignorácia diakritiky pri vyhľadávaní

--- a/meniny.html
+++ b/meniny.html
@@ -12,9 +12,11 @@
         <header>
             <h1>Meniny</h1>
         </header>
-        <input type="text" id="datum" onchange="zmena()" size="5" maxlength="5">
+        <input type="text" id="datum" onchange="zmenaDatumu()" size="5" maxlength="5" placeholder="Datum">
+        <input type="text" id="meno" onchange="zmenaMena()" size="5" maxlength="10" placeholder="Meno">
 
-        <div id="text"></div>
+        <div id="meniny"></div>
+        <div id="ukazDatum"></div>
 
 
     </body>
