Pocet navstev, nove js,css,favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Hlavna stránka</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -34,6 +35,20 @@ Arne Michalov:
 riešia vodiči na križovatkách (takéto úlohy nájdete v online testoch, ktoré slúžia na
 prípravu pre získanie vodičského preukazu). 
         </section>
+    
+    <section>
+        <div id="links">
+            <a href=""></a>
+        </div>
+    </section>
+
+    <footer>
+        <div id="visitcounter">
+            <!-- Badge Code - Do Not Change The Code -->
+            <a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" rel="nofollow noopener" title="Hit counter" data-name="b12030dc688b98211490174fdedc4288|5|page|1|#ea5050|#ffffff|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+            <!-- Badge Code End Here -->
+        </div>
+    </footer>
 
 
     </body>
