--- a/krizovatky.html
+++ b/krizovatky.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Križovatky</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="stylekrizovatky.css">
+        <link href="favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header>
