--- a/meniny.html
+++ b/meniny.html
@@ -16,7 +16,7 @@
         <div class="stlpec">
             <label><b>Zadajte datum</b></label>
             <input type="text" id="datum" onchange="zmenaDatumu()" size="5" maxlength="5" placeholder="Datum" >
-            <span class="napoveda">Zadajte datum v tvare DD.MM</span>
+            <span class="napoveda">Zadajte dátum v tvare DD.MM</span>
         </div>
         <div class="stlpec">
             <label><b>Zadajte meno</b></label>
