--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <header>
             <h1>Hlavná stránka</h1>
         </header>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Hlavná stránka</a></li>
+                <li> <a href="krizovatky.html">Krizovatky </a> </li>
+                <li><a href="meniny.html"> Meniny</a></li>
+            </ul>
+        </nav>
+
         <section>
 
             Martin Pullman:
