--- a/krizovatky.html
+++ b/krizovatky.html
@@ -11,6 +11,14 @@
             <h1>Križovatky</h1>
         </header>
 
+        <nav>
+            <ul>
+                <li><a href="index.html"> Hlavná stránka</a></li>
+                <li> <a href="krizovatky.html">Krizovatky </a> </li>
+                <li><a href="meniny.html"> Meniny</a></li>
+            </ul>
+        </nav>
+
 
 
     </body>
