--- a/meniny.html
+++ b/meniny.html
@@ -13,6 +13,13 @@
         <header>
             <h1>Meniny</h1>
         </header>
+        <nav>
+            <ul>
+                <li><a href="index.html"> Hlavná stránka</a></li>
+                <li> <a href="krizovatky.html">Krizovatky </a> </li>
+                <li><a href="meniny.html"> Meniny</a></li>
+            </ul>
+        </nav>
         <div class="stlpec">
             <label><b>Zadajte datum</b></label>
             <input type="text" id="datum" onchange="zmenaDatumu()" size="5" maxlength="5" placeholder="Datum" >
