zakladny pohyb auta, typy aut

--- a/krizovatky.html
+++ b/krizovatky.html
@@ -5,13 +5,12 @@
         <title>Križovatky</title>
         <link rel="stylesheet" type="text/css" href="stylekrizovatky.css">
         <link href="favicon.ico" rel="icon" type="image/x-icon">
+        
     </head>
     <body>
         <header>
             <h1>Križovatky</h1>
         </header>
-        <canvas width="300" height="200"></canvas>
-
         <nav>
             <ul>
                 <li><a href="index.html"> Hlavná stránka</a></li>
@@ -20,8 +19,9 @@
             </ul>
         </nav>
 
+        <canvas id="Canvas1" width="480" height="250" ></canvas>
 
-
+        <script type="text/javascript" src="krizovatkyJS.js"></script>
     </body>
 
 </html>
