Novy header, rozdelenie krizovatiek do stranok

--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
         <link href="favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
-        <header>
-            <h1>Hlavná stránka</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="index.html"> Hlavná stránka</a></li>
-                <li> <a href="krizovatky.html">Krizovatky </a> </li>
-                <li><a href="meniny.html"> Meniny</a></li>
-            </ul>
-        </nav>
-
+        <div class="header">
+            <a href="#default" class="logo">Hlavná stránka</a>
+            <div class="header-right">
+              <a class="active" href="index.html">Hlavná stránka</a>
+              <a href="krizovatky.html">Krizovatky</a>
+              <a href="meniny.html">Meniny</a>
+            </div>
+          </div>
+        
         <section>
 
             Martin Pullman:
