--- a/krizovatka15.html
+++ b/krizovatka15.html
@@ -18,6 +18,8 @@
           </div>
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
+        <button  onclick="demoFunction()">Demo</button>
+        <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka15JS.js"></script>
         <div id="navigacia_krizovatky">
