krizovatka so zatacanim komplet

--- a/krizovatka2.html
+++ b/krizovatka2.html
@@ -21,8 +21,10 @@
         
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
+        <button  onclick="demoFunction()">Demo</button>
+        <p id="vylustenieKrizovatky"></p>
 
-        <script type="text/javascript" src="krizovatkaJS2.js"></script>
+        <script type="text/javascript" src="krizovatka2JS.js"></script>
 
         <div id="navigacia_krizovatky">
             <a href="krizovatka3.html">Nasledujuca</a>
