Dizajn pre tlac, button

--- a/krizovatka2.html
+++ b/krizovatka2.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="header">
-            <a href="#default" class="logo">Hlavná stránka</a>
+            <a href="#default" class="logo">Križovatka 2</a>
             <div class="header-right">
               <a class="active" href="index.html">Hlavná stránka</a>
               <a href="krizovatky.html">Krizovatky</a>
