--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Hlavna stránka</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" media="screen" href="style.css">
+        <link rel="stylesheet" media="print" href="print.css">
         <link href="favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
@@ -80,6 +81,12 @@ prípravu pre získanie vodičského preukazu).
                 <th></th>
             </tr>
             <tr>
+                <th>Prispôsobenie na tlač</th>
+                <th><input type="checkbox" checked></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
                 <th>Meniny</th>
                 <th></th>
                 <th></th>
@@ -88,7 +95,7 @@ prípravu pre získanie vodičského preukazu).
             <tr>
                 <th>Krizovatka 1</th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
