--- a/krizovatka3.html
+++ b/krizovatka3.html
@@ -21,6 +21,8 @@
        
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka3JS.js"></script>
         <div id="navigacia_krizovatky">
