--- a/krizovatky.html
+++ b/krizovatky.html
@@ -22,7 +22,7 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
 
-        <button  onclick="demoFunction()">Demo</button>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
         <p id="vylustenieKrizovatky"></p>
         
         <script type="text/javascript" src="krizovatkyJS.js"></script>
