Dizajn button oprava

--- a/krizovatka15.html
+++ b/krizovatka15.html
@@ -18,7 +18,7 @@
           </div>
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
-        <button  onclick="demoFunction()">Demo</button>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
         <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka15JS.js"></script>
