--- a/krizovatka2.html
+++ b/krizovatka2.html
@@ -21,7 +21,7 @@
         
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
-        <button  onclick="demoFunction()">Demo</button>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
         <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka2JS.js"></script>
