--- a/krizovatka13.html
+++ b/krizovatka13.html
@@ -18,6 +18,9 @@
           </div>
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <button  class="button button1"><a href="krizovatka13.html">Reset</a></button>
+        <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka13JS.js"></script>
         <div id="navigacia_krizovatky">
