--- a/krizovatka6.html
+++ b/krizovatka6.html
@@ -17,6 +17,8 @@
             </div>
           </div>
         <canvas id="Canvas1" width="480" height="250" ></canvas>
+        <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka6JS.js"></script>
         <div id="navigacia_krizovatky">
