--- a/krizovatka2.html
+++ b/krizovatka2.html
@@ -22,6 +22,7 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <button  class="button button1"><a href="krizovatka2.html">Reset</a></button>
         <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka2JS.js"></script>
