--- a/krizovatka4.html
+++ b/krizovatka4.html
@@ -20,6 +20,7 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <button  class="button button1"><a href="krizovatka4.html">Reset</a></button>
         <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka4JS.js"></script>
