--- a/krizovatky.html
+++ b/krizovatky.html
@@ -23,6 +23,7 @@
         <canvas id="Canvas1" width="480" height="250" ></canvas>
 
         <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <button  class="button button1"><a href="krizovatky.html">Reset</a></button>
         <p id="vylustenieKrizovatky"></p>
         
         <script type="text/javascript" src="krizovatkyJS.js"></script>
