Pridanie RESETU a navodu

--- a/krizovatka7.html
+++ b/krizovatka7.html
@@ -19,7 +19,8 @@
 
         <canvas id="Canvas1" width="600" height="333" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <p id="vylustenieKrizovatky"></p>
+        <button  class="button button1"><a href="krizovatka7.html">Reset</a></button>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
 
         <script type="text/javascript" src="krizovatka7JS.js"></script>
