--- a/krizovatky.html
+++ b/krizovatky.html
@@ -24,7 +24,7 @@
 
         <button  onclick="demoFunction()" class="button button1">Demo</button>
         <button  class="button button1"><a href="krizovatky.html">Reset</a></button>
-        <p id="vylustenieKrizovatky"></p>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
         
         <script type="text/javascript" src="krizovatkyJS.js"></script>
 
