--- a/krizovatka10.html
+++ b/krizovatka10.html
@@ -18,7 +18,8 @@
           </div>
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <p id="vylustenieKrizovatky"></p>
+        <button  class="button button1"><a href="krizovatka10.html">Reset</a></button>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
         <script type="text/javascript" src="krizovatka10JS.js"></script>
         <div id="navigacia_krizovatky">
