--- a/krizovatka11.html
+++ b/krizovatka11.html
@@ -19,7 +19,8 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <p id="vylustenieKrizovatky"></p>
+        <button  class="button button1"><a href="krizovatka11.html">Reset</a></button>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
         <script type="text/javascript" src="krizovatka11JS.js"></script>
         <div id="navigacia_krizovatky">
