--- a/krizovatka2.html
+++ b/krizovatka2.html
@@ -23,7 +23,7 @@
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
         <button  class="button button1"><a href="krizovatka2.html">Reset</a></button>
-        <p id="vylustenieKrizovatky"></p>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
         <script type="text/javascript" src="krizovatka2JS.js"></script>
 
