--- a/krizovatka3.html
+++ b/krizovatka3.html
@@ -23,7 +23,7 @@
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
         <button  class="button button1"><a href="krizovatka3.html">Reset</a></button>
-        <p id="vylustenieKrizovatky"></p>
+        <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
         <script type="text/javascript" src="krizovatka3JS.js"></script>
         <div id="navigacia_krizovatky">
