--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#default" class="logo">Hlavná stránka</a>
             <div class="header-right">
               <a class="active" href="index.html">Hlavná stránka</a>
-              <a href="krizovatky.html">Krizovatky</a>
+              <a href="krizovatky.html">Križovatky</a>
               <a href="meniny.html">Meniny</a>
             </div>
           </div>
@@ -93,91 +93,91 @@ prípravu pre získanie vodičského preukazu).
                 <th><input type="checkbox" name="" id="" checked></th>
             </tr>
             <tr>
-                <th>Krizovatka 1</th>
+                <th>Križovatka 1</th>
                 <th></th>
                 <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 2</th>
+                <th>Križovatka 2</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 3</th>
+                <th>Križovatka 3</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 4</th>
+                <th>Križovatka 4</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 5</th>
+                <th>Križovatka 5</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 6</th>
+                <th>Križovatka 6</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 7</th>
+                <th>Križovatka 7</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 8</th>
+                <th>Križovatka 8</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 9</th>
+                <th>Križovatka 9</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 10</th>
+                <th>Križovatka 10</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 11</th>
+                <th>Križovatka 11</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 12</th>
+                <th>Križovatka 12</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 13</th>
+                <th>Križovatka 13</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 14</th>
+                <th>Križovatka 14</th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
-                <th>Krizovatka 15</th>
+                <th>Križovatka 15</th>
                 <th></th>
                 <th></th>
                 <th></th>
