--- a/krizovatka8.html
+++ b/krizovatka8.html
@@ -19,7 +19,8 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <p id="vylustenieKrizovatky"></p>
+        <button  class="button button1"><a href="krizovatka8.html">Reset</a></button>
+        <p id="vylustenieKrizovatky">Návod: <br> Pre chodca platí semafor, ktorý je pri červenej budove. <br> Pre autá platí semafor, ktorý majú sprava. </p>
 
         <script type="text/javascript" src="krizovatka8JS.js"></script>
         <div id="navigacia_krizovatky">
