--- a/krizovatka9.html
+++ b/krizovatka9.html
@@ -19,6 +19,7 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
+        <button  class="button button1"><a href="krizovatka9.html">Reset</a></button>
         <p id="vylustenieKrizovatky"></p>
 
         <script type="text/javascript" src="krizovatka9JS.js"></script>
