--- a/meniny.html
+++ b/meniny.html
@@ -27,6 +27,15 @@
             <label><b>Zadajte meno</b></label>
             <input type="text" id="meno" onchange="zmenaMena()" size="5" maxlength="10" placeholder="Meno">
         </div>
+        <div class="vyber">
+            <select onchange="zmenaMena()" id="vyberKrajiny">
+                <option value="SK">SK</option>
+                <option value="CZ">CZ</option>
+                <option value="HU">HU</option>
+                <option value="AT">AT</option>
+              </select>
+
+        </div>
         
         <div id="meniny"></div>
         <div id="ukazDatum"></div>
