--- a/meniny.html
+++ b/meniny.html
@@ -33,6 +33,7 @@
                 <option value="CZ">CZ</option>
                 <option value="HU">HU</option>
                 <option value="AT">AT</option>
+                <option value="PL">PL</option>
               </select>
 
         </div>
