Uprava aby sedela html validacia

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ prípravu pre získanie vodičského preukazu).
             </tr>
             <tr>
                 <th>Počitadlo prístupov</th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
                 
             </tr>
             <tr>
                 <th>Favicon</th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox"  checked></th>
                 <th></th>
                 <th></th>
             </tr>
@@ -72,12 +72,12 @@ prípravu pre získanie vodičského preukazu).
                 <th>Tlač</th>
                 <th></th>
                 <th></th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox"  checked></th>
             </tr>
             <tr>
                 <th>Rezponzívny dizajn</th>
                 <th></th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox"  checked></th>
                 <th></th>
             </tr>
             <tr>
@@ -90,7 +90,7 @@ prípravu pre získanie vodičského preukazu).
                 <th>Meniny</th>
                 <th></th>
                 <th></th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox"  checked></th>
             </tr>
             <tr>
                 <th>Križovatka 1</th>
@@ -185,12 +185,12 @@ prípravu pre získanie vodičského preukazu).
             <tr>
                 <th>Validácia</th>
                 <th></th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Dizajn </th>
-                <th><input type="checkbox" name="" id="" checked></th>
+                <th><input type="checkbox"  checked></th>
                 <th></th>
                 <th></th>
             </tr>
