--- a/krizovatka13.html
+++ b/krizovatka13.html
@@ -19,7 +19,7 @@
 
         <canvas id="Canvas1" width="480" height="250" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <button  class="button button1"><a href="krizovatka13.html">Reset</a></button>
+        <button  class="button button1" onclick="window.location.href = 'krizovatka2.html';">Reset</button>
         <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
         <script type="text/javascript" src="krizovatka13JS.js"></script>
