--- a/krizovatka7.html
+++ b/krizovatka7.html
@@ -19,7 +19,7 @@
 
         <canvas id="Canvas1" width="600" height="333" ></canvas>
         <button  onclick="demoFunction()" class="button button1">Demo</button>
-        <button  class="button button1"><a href="krizovatka7.html">Reset</a></button>
+        <button  class="button button1" onclick="window.location.href = 'krizovatka2.html';">Reset</button>
         <p id="vylustenieKrizovatky">Kliknite na autíčka v správnom poradí.</p>
 
 
