--- a/index.html
+++ b/index.html
@@ -101,48 +101,48 @@ prípravu pre získanie vodičského preukazu).
             <tr>
                 <th>Križovatka 2</th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 3</th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 4</th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 5</th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 6</th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 7</th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 8</th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
             </tr>
             <tr>
                 <th>Križovatka 9</th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
                 <th></th>
                 <th></th>
             </tr>
@@ -150,37 +150,37 @@ prípravu pre získanie vodičského preukazu).
                 <th>Križovatka 10</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Križovatka 11</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Križovatka 12</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Križovatka 13</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Križovatka 14</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Križovatka 15</th>
                 <th></th>
                 <th></th>
-                <th></th>
+                <th><input type="checkbox" checked></th>
             </tr>
             <tr>
                 <th>Validácia</th>
